[package]
name = "fastchess"
version = "0.1.0"
edition = "2021"
description = "A high-performance chess engine tournament manager"

[dependencies]
# Chess library for board representation, move generation, and SAN/UCI parsing
shakmaty = "0.27"
pgn-reader = "0.26"

# JSON serialization/deserialization (replaces nlohmann/json)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Unix process management (nix provides safe wrappers around POSIX APIs)
nix = { version = "0.29", features = ["process", "signal", "poll", "fs", "sched", "event", "resource"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Signal handling
ctrlc = "3"

# CRC32
crc32fast = "1"

# Math functions (erf, etc.) not available in std
libm = "0.2"

# libc — for syscall(SYS_gettid) on Linux
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
